  - Fix argument parsing for darshan-convert, reported by Mouhamed Gueye.
  - Fix metadata annotation overflow in darshan-convert, reported by 
    Mouhamed Gueye.
  - Fix const-correctness in dynamic library when built against MPI 3.x
    libraries.
  - Fix "undefined symbol: dlsym" error when using preloaded dynamic library
    on some platforms, reported by Florin Isaila.

darshan-2.2.8
=============
* WARNING: please note that the Darshan module file for Cray environments has
  been updated, especially in the DARSHAN_POST_LINK_OPTS variable.  Please
  update your module file accordingly when upgrading from 2.2.7 or earlier 
  on Cray platforms.
* Improved ability to analyze I/O activity related to particular files 
  opened by an application
  - darshan-summary-per-file.sh script to generate a separate pdf summary for
    each file opened by an application. Developed by Rob Latham.
  - Added --file-list and --file-list-detailed options to darshan-parser to 
    list files opened by an application along with brief statistics
  - Added --file option to darshan-convert to filter out activity for a
    specific file from a Darshan log
* Add wrappers for POSIX AIO operations (fixes tracking of underlying POSIX
  operations resulting from nonblocking MPI-IO operations.  Bug reported by
  David Shrader.)
* Fix compile-time errors when Darshan is configured for use with MPICH 3.x 
  installations with const correct MPI function prototypes. Also affects 
  MPICH 1.5+ installations with optional const support.  Reported by Yushu Yao.
* Fix segmentation fault when using LD_PRELOAD instrumentation on programs
  that use MPI_Init_thread() rather than MPI_Init().  Reported by Myriam
  Botalla.

darshan-2.2.7
=============
* Updated Cray installation documentation for cleaner integration in Cray
  environments
* Fix bug that recorded incorrect device ID (and therefore incorrect mount
  point mapping) if stat() was called before open() on a file